# resume-api

auth-service/: .env  Cargo.toml  diesel.toml
auth-service/migrations/2024-07-30-125652_create_users/: up.sql
auth-service/src/: lib.rs  main.rs  routes.rs
auth-service/src/config/: database.rs  mod.rs
auth-service/src/errors/: error.rs  error_response.rs  mod.rs
auth-service/src/handlers/: auth.rs
auth-service/src/middleware/: rate_limiter.rs
auth-service/src/models/: auth.rs  mod.rs  user.rs
auth-service/src/repositories/: user_repository.rs
auth-service/src/services/: auth_service.rs  kafka_service.rs  mod.rs
auth-service/src/tests/: mod.rs  rate_limiter_tests.rs  user_tests.rs
auth-service/src/utils/: mod.rs  verify_password.rs
resume-service/: Cargo.toml
user-service/: .env  Cargo.toml  diesel.toml
user-service/migrations/2024-08-08-230921_create_users/: up.sql
user-service/src/: lib.rs  main.rs  routes.rs
user-service/src/config/: database.rs
user-service/src/handlers/: user_handler.rs
user-service/src/middleware/: rate_limiter.rs
user-service/src/models/: schema.rs  user.rs
user-service/src/repositories/: user_repository.rs
user-service/src/services/: kafka_service.rs  user_service.rs
user-service/src/tests/: rate_limiter_tests.rs  user_tests.rs
user-service/src/utils/: hash_password.rs  mod.rs  validate_token.rs
