[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.7.0"
aes-gcm = { version = "0.10.3", features = ["aes"] }
argon2 = "0.5.3"
base64 = "0.22.1"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
lazy_static = "1.4.0"
serial_test = "3.1.1"
rdkafka = "0.36.2"
validator = { version = "0.18.1", features = ["derive"] }
validator_derive = "0.18.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
actix-limitation = "0.5.1"
config = "0.14.0"
futures = "0.3.30"
actix-governor = "0.5.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
thiserror = "1.0.63"
