[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
argon2 = "0.5.3"
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
postgres = "0.19.8"
r2d2 = "0.8"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
validator_derive = "0.18.1"


[dev-dependencies]
diesel_cli = { version = "2.0", features = ["postgres"] }
